Fixing Logo being cut off problem

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -195,7 +195,6 @@ div.bg_pulp {
 }
 .brand .logo {
   margin: 0px 0px 0px 10px;
-  top: -4px;
 }
 .brand .logo_text {
   font-size: 1.6em;
